<resources>
    <string name="app_name">presentation</string>
    <string name="home_title">Movie library</string>
    <string name="popular_title">Popular movies</string>
    <string name="movie_title">Movie details</string>
    <string name="home_button_settings">Settings</string>
    <string name="splash_status_loading">Please wait…</string>
    <string name="splash_status_failed">Something went wrong</string>
    <string name="image_warning_description">warning</string>
    <string name="splash_button_retry">Retry loading</string>
    <string name="settings_title">Settings</string>
    <string name="settings_language_hint">Api language</string>
    <string name="settings_dark_mode_hint">Dark mode</string>
    <string name="movie_backdrop_image">Movie backdrop image</string>
    <string name="movie_poster_image">Movie poster image</string>
    <string name="person_birthday_title">Birthday:</string>
    <string name="person_death_title">Day of death:</string>
    <string name="person_original_name_title">Original name:</string>
    <string name="person_biography_title">Biography</string>
    <string name="movie_genre_list_title">Genre list:</string>
    <string name="movie_release_date_title">Release date:</string>
    <string name="movie_cast_list_title">Cast list</string>
    <string name="movie_director_title">Director</string>
    <string name="movie_writer_title">Writer</string>
    <string name="home_popular_title">Popular movies</string>
    <string name="home_button_popular">View all</string>
    <string name="settings_dark_mode_title">Dark mode</string>
    <string name="settings_dark_mode_system">As system</string>
    <string name="settings_dark_mode_yes">Yes</string>
    <string name="settings_dark_mode_no">No</string>
    <string name="home_most_votes_title">Movies with the most votes</string>
    <string name="person_movie_list_title">Popular movies:</string>
</resources>