<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".person.PersonFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|snap"
            app:menu="@menu/person_menu"
            app:navigationIcon="@drawable/ic_menu_back_32"
            tools:title="Person" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/chapter_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/dimen2"
        android:paddingEnd="@dimen/dimen2"
        android:paddingBottom="@dimen/dimen2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dimen2"
                    app:cardCornerRadius="@dimen/dimen2">

                    <ImageView
                        android:id="@+id/person_photo"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:src="@drawable/person_placeholder_medium_male"
                        tools:ignore="ContentDescription" />

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_original_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen2"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:text="@string/person_original_name_title" />


                    <TextView
                        android:id="@+id/text_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen2"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:text="@string/person_birthday_title" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_marginTop="@dimen/dimen2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/person_biography_title" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="Overview" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>