<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie.MovieFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleTextColor="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7">

                <ImageView
                    android:id="@+id/backdrop_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/poster_placeholder_w342"
                    android:contentDescription="@string/movie_backdrop_image"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen2"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/poster_image"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitStart"
                        tools:src="@drawable/poster_placeholder_w342"
                        android:contentDescription="@string/movie_poster_image" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/dimen2"
                    app:cardBackgroundColor="#A0311B92"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/text_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen2"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@android:color/white"
                        tools:text="9.7" />

                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/movie_menu"
                app:navigationIcon="@drawable/ic_menu_back_32"
                app:title="@string/movie_title" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/chapter_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/dimen2"
        android:paddingEnd="@dimen/dimen2"
        android:paddingBottom="@dimen/dimen2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen2"
                tools:text="Movie title"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <TextView
                android:id="@+id/text_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen2"
                tools:text="Genre list"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Overview"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cast_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/layout_cast" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen4"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>